Fix border issue on mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -51,7 +51,7 @@ main {
     position: relative;
 
     img {
-        // visibility: hidden;
+        object-fit: cover;
         width: 100%;
         height: 100%;
         border-top-right-radius: 0.5rem;
@@ -146,6 +146,13 @@ main {
 
     .img-wrapper {
         width: 100%;
+        border-bottom-right-radius: 0;
+        border-top-left-radius: 0.5rem;
+
+        img {
+            border-bottom-right-radius: 0;
+            border-top-left-radius: 0.5rem;
+        }
     }
 
     .text {
